--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "keywords": [
     "php"
   ],
-  "version": "0.0.5",
+  "version": "0.0.6",
   "author": {
     "name": "Nardi Lam",
     "email": "me@nardilam.nl"
@@ -17,11 +17,12 @@
   "bin": "./main.js",
   "main": "./prepare.js",
   "dependencies": {
+    "body-parser": "1.9.2",
     "connect": "https://registry.npmjs.org/connect/-/connect-3.3.2.tgz",
-    "fastcgi-server": "0.0.5",
     "fibrous": "^0.3.3",
     "jsdom": "^1.2.1",
     "morgan": "https://registry.npmjs.org/morgan/-/morgan-1.5.0.tgz",
+    "node-fastcgi": "^0.1.8",
     "optimist": "^0.6.1",
     "serve-static": "https://registry.npmjs.org/serve-static/-/serve-static-1.7.1.tgz",
     "uglify-js": "https://registry.npmjs.org/uglify-js/-/uglify-js-2.4.15.tgz"
